# dnn-mh-classifier

./: .gitignore  main.py  pyproject.toml
source/: __init__.py  data_loader.py  data_processing.py  feature_extractor.py  model.py
