[tool.poetry]
name = "dnn-mh-classifier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dnn_mh_classifier"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.112.2"
torch = "2.5.1"
pandas = "2.2.3"
spacy = "3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
